--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,10 +14,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y cmake g++ libgtest-dev
+    # Run once to install dependencies
+    #    apt-get update
+    #    apt-get install -y cmake g++ libgtest-dev
     
     - name: Build
       run: |
